--- a/app/views/spree/checkout/_address_step.html.slim
+++ b/app/views/spree/checkout/_address_step.html.slim
@@ -54,6 +54,7 @@
           = radio_button_tag 'ship_to_address', 'Ship to different address', !((@order.bill_address.empty? && @order.ship_address.empty?) || @order.bill_address.same_as?(@order.ship_address))
           span.shipAddress
             | Ship to different address
+          = form.hidden_field :use_billing
 
     .form-wrapper data-hook='shipping_inner'
       = form.fields_for :ship_address do |ship_form|
