--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -429,9 +429,7 @@ ul.secondary.pull-right {
 
 li#cart-trigger {
   span#cart-item-count {
-    @media (max-width: 480px) {
-      color: white;
-    }
+    color: white;
     @media (max-width: 991px) {
       top: 0.7rem;
       left: -1.7rem;
@@ -449,6 +447,10 @@ li#cart-trigger {
     }
     @media(min-width: 400px)and(max-width:450px){
       padding-left: 20px;
+      padding-right: 5px;
+    }
+    @media(min-width: 590px){
+      padding-left: 60px;
       padding-right: 5px;
     }
   }
