--- a/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
+++ b/engines/admin_ui/app/views/admin_ui/item_returns/index.html.slim
@@ -5,6 +5,8 @@
 
 = paginate @collection.assets, theme: 'admin_ui'
 
+= link_to "Download CSV", url_for(format: 'csv')
+
 div
   = datagrid_table @collection, html: {class: 'table table.condensed'}
 
