use css transition , remove log and fix iphone slidedown

--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -513,9 +513,8 @@ li#cart-trigger {
   width: 20em;
   z-index: 2000;
   background-color: #f8f8f8;
-  .open{
-    -webkit-transition: all 5s;
-  }
+  -webkit-transition: margin-left 0.7s; /* Safari */
+  transition: margin-left 0.7s;
 
   .navbar-header {
     background-color: #e7e7e7;
