--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -470,7 +470,7 @@ li#cart-trigger {
       @media(max-width:450px) {
         margin-left: -5px;
       }
-      @media(min-width:550px)and(max-width:850px) {
+      @media(min-width:550px){
         margin-left: -20px;
       }
     }
@@ -486,12 +486,12 @@ li#cart-trigger {
   }
 
   //iphone 6
-  @media(min-width: 325px)and(max-width:380px){
+  @media(min-width: 325px)and(max-width:385px){
     margin-left: 90px;
   }
 
   //iphone 6plus
-  @media(min-width: 385px)and(max-width:420px){
+  @media(min-width: 385px)and(max-width:430px){
     margin-left: 110px;
   }
 
@@ -530,7 +530,7 @@ li#cart-trigger {
     left: -575px;
   }
 
-  @media(min-width: 760px)and(max-width:790px){
+  @media(min-width: 760px)and(max-width:799px){
     width: 745px;
     left: -745px;
   }
