use another hamburger

--- a/app/views/layouts/redesign/_header.html.slim
+++ b/app/views/layouts/redesign/_header.html.slim
@@ -71,7 +71,7 @@ ruby:
           nav.navbar.navbar-default.visible-xs.visible-sm.hamburger role="navigation"
             .navbar-header
               button.navbar-toggle.visible-xs.visible-sm#side-menu-trigger type="button"
-                = image_tag('hamburger.png')
+                = image_tag('Hamburger.svg')
 
         .masthead.pull-left.hidden-xs
           = link_to root_path
@@ -126,7 +126,7 @@ ruby:
     .navbar-header
       a.navbar-brand href="#"  SHOP
       a#close
-        = image_tag('hamburger.png')
+        = image_tag('Hamburger.svg')
     .main-menu
       ul.nav.navbar-nav
         li
