--- a/app/assets/stylesheets/redesign/_header.css.scss
+++ b/app/assets/stylesheets/redesign/_header.css.scss
@@ -1,3 +1,35 @@
+@import 'redesign/vars';
+
+/////////// locale switcher (grey top menu) //////////
+
+#locale-switcher-bar {
+  background-color: $gray-light-bg;
+  font-size: 15px;
+  padding-bottom: 10px;
+  padding-top: 10px;
+  text-transform: none;
+
+  .col-md-4 {
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+
+  #select-locale {
+    padding-left: 35px;
+  }
+
+  #ad-text {
+    font-family: "forum", sans-serif;
+    text-transform: uppercase;
+  }
+
+  #customer-service {
+    padding-right: 35px;
+  }
+}
+
+/////////// mega menu //////////
+
 .nav-menu {
   text-transform: uppercase;
   font-size: 1.4rem;
