--- a/app/assets/stylesheets/application_redesign.css.scss
+++ b/app/assets/stylesheets/application_redesign.css.scss
@@ -38,6 +38,7 @@
 @import 'redesign/login';
 @import 'redesign/sale_lp';
 @import 'redesign/fashion-it-girl-winner';
+@import 'redesign/landing-page-mobile';
 @import 'redesign/style_session';
 @import 'redesign/tables';
 
