--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -1,6 +1,7 @@
 .container-fluid
-  .span
-    = image_tag('landing-page-mobile/holydress.png', class: 'holydress')
+  a(href="#")
+    .span
+      = image_tag('landing-page-mobile/holydress.png', class: 'holydress')
   .row
     center
       = image_tag('landing-page-mobile/header.png', class: "landing-page-header")
