--- a/app/views/statics/landing_page_mobile.html.slim
+++ b/app/views/statics/landing_page_mobile.html.slim
@@ -13,9 +13,27 @@
     = image_tag('landing-page-mobile/shopthislook.png', class: "shopthislook")
   .row
     = image_tag('landing-page-mobile/tip3.png', class: "landing-page-tip3")
+
+  - @products = Revolution::ProductService.new(['587','566','479'], current_site_version).spree_products
+
+  .row
+    = link_to collection_product_path(@products[0]) do
+      .details.text-center.threedresses-first
+        span.name = @products[0].name
+        span.price = price_for_product(@products[0])
+    = link_to collection_product_path(@products[1]) do
+      .details.text-center.threedresses-second
+        span.name = @products[1].name
+        span.price = price_for_product(@products[1])
+    = link_to collection_product_path(@products[2]) do
+      .details.text-center.threedresses-third
+        span.name = @products[2].name
+        span.price = price_for_product(@products[2])
+
+  - @products = Revolution::ProductService.new(['495','575','582','573'], current_site_version).spree_products
   .row
     center
-      = image_tag('landing-page-mobile/threedresses.jpg', class: "landing-page-threedresses")
+      = image_tag('landing-page-mobile/threedresses2.jpg', class: "landing-page-threedresses")
   .row
     = image_tag('landing-page-mobile/tip4.png', class: "landing-page-tip4")
   .row
@@ -56,8 +74,5 @@
       .details.text-center
         span.name = @products[3].name
         span.price = price_for_product(@products[3])
-
-  .row.blackRow
-    center
-      span
-        = button_to 'VIEW ALL OUR DRESSES', dresses_path, method: :get
+  .row
+    = image_tag('landing-page-mobile/bohemium.jpg', class: "landing-page-bohemium")
