--- a/app/assets/stylesheets/redesign/header/select2_fame_theme/_single.css.scss
+++ b/app/assets/stylesheets/redesign/header/select2_fame_theme/_single.css.scss
@@ -1,11 +1,15 @@
+$arrow-color: #000000;
+
 .select2-selection--single {
-  background-color: #fff;
-  border: 1px solid #aaa;
+  background-color: transparent;
+  border: none;
   border-radius: 4px;
 
   .select2-selection__rendered {
     color: #444;
-    line-height: 28px;
+    font-weight: normal !important; // Important due to span font-weight. Don't mess with legacy
+    line-height: inherit;
+    text-transform: none;
   }
 
   .select2-selection__clear {
@@ -29,7 +33,7 @@
     width: 20px;
 
     b {
-      border-color: #888 transparent transparent transparent;
+      border-color: $arrow-color transparent transparent transparent;
       border-style: solid;
       border-width: 5px 4px 0 4px;
 
@@ -62,7 +66,7 @@
 
 &.select2-container--disabled {
   .select2-selection--single {
-    background-color: #eee;
+    background-color: transparent;
     cursor: default;
 
     .select2-selection__clear {
@@ -75,7 +79,7 @@
   .select2-selection--single {
     .select2-selection__arrow {
       b {
-        border-color: transparent transparent #888 transparent;
+        border-color: transparent transparent $arrow-color transparent;
         border-width: 0 4px 5px 4px;
       }
     }
