--- a/app/assets/stylesheets/redesign/header/select2_fame_theme/layout.css.scss
+++ b/app/assets/stylesheets/redesign/header/select2_fame_theme/layout.css.scss
@@ -1,6 +1,12 @@
+$selected-color:  #DDD;
+$highlight-color: $selected-color;
+$disabled-color:  #999;
+
 .select2-container--fame {
   @import "single";
   @import "multiple";
+
+  text-transform: none;
 
   &.select2-container--open.select2-container--above {
     .select2-selection--single, .select2-selection--multiple {
@@ -16,9 +22,14 @@
     }
   }
 
+  .select2-dropdown {
+    background: none;
+    border: none;
+  }
+
   .select2-search--dropdown {
     .select2-search__field {
-      border: 1px solid #aaa;
+      border: none;
     }
   }
 
@@ -37,16 +48,23 @@
   }
 
   .select2-results__option {
+    height: auto;
+    font-size: inherit;
+    line-height: normal;
+    text-transform: none;
+    font-weight: normal;
+    padding: 0 5px;
+
     &[role=group] {
       padding: 0;
     }
 
     &[aria-disabled=true] {
-      color: #999;
+      color: $disabled-color;
     }
 
     &[aria-selected=true] {
-      background-color: #ddd;
+      background-color: $selected-color;
     }
 
     .select2-results__option {
@@ -84,8 +102,8 @@
   }
 
   .select2-results__option--highlighted[aria-selected] {
-    background-color: #5897fb;
-    color: white;
+    background-color: $highlight-color;
+    color: inherit;
   }
 
   .select2-results__group {
