--- a/app/assets/stylesheets/redesign/landing-page-mobile.css.scss
+++ b/app/assets/stylesheets/redesign/landing-page-mobile.css.scss
@@ -158,3 +158,16 @@
 .landing-page-bohemium{
   width: 100%;
 }
+
+.linkarea{
+  width: 75%;
+  height: 35px;
+  z-index: 3;
+  margin-top: -48px;
+  position: relative;
+}
+.item{
+  width: 33.3%;
+  height: 35px;
+  float: left;
+}
