[fix] separate js requires in application_redesign.js
locale switcher JST template (selected version still missing)

JST templates were not working properly (never detecting selected version)

locale switcher without JST

--- a/app/assets/stylesheets/redesign/header/select2_fame_theme/layout.css.scss
+++ b/app/assets/stylesheets/redesign/header/select2_fame_theme/layout.css.scss
@@ -6,6 +6,7 @@ $disabled-color:  #999;
   @import "single";
   @import "multiple";
 
+  min-width: 110px;
   text-transform: none;
 
   &.select2-container--open.select2-container--above {
