[feat] use site version presenter for locale selector
top menu height according to mobile view

adjusting top menu height (checkout, categories, product and landing pages) to new height (with locale switcher)

fix top distance of pages according to new top menu height

- Top bar distance
    - Desktop
        - [x] Checkout
        - [x] Category
        - [x] Product
        - [x] Landing pages
        - [x] FAQ
        - [x] Homepage
    - Mobile
        - [x] Checkout
        - [x] Category
        - [x] Product
        - [x] Landing pages
        - [x] FAQ
        - [x] Homepage

Removing pry related gems (unused)

adjust locale switcher select2 CSS

Fix arrow positioning on hidden menus on the mega menu

[fix] extract application preferences to its own initializer

--- a/app/assets/stylesheets/redesign/_checkout.css.scss
+++ b/app/assets/stylesheets/redesign/_checkout.css.scss
@@ -1,4 +1,19 @@
 // Checkout page url: /checkout
+$desktop-nav-menu-height: 70px;
+$mobile-nav-menu-height: 70px;
+
+.nav-menu.checkout {
+  height: $desktop-nav-menu-height;
+
+  .mobile-logo {
+    margin-left: 0;
+  }
+}
+
+.page-title.checkout-title {
+  margin-top: $desktop-nav-menu-height;
+}
+
 .page-content.checkout {
   // - Override form styles
 
