--- a/app/views/layouts/redesign/_logo.html.slim
+++ b/app/views/layouts/redesign/_logo.html.slim
@@ -1,6 +1,6 @@
 - cache [:layout, :header_logo, spree_user_signed_in?], expires_in: configatron.cache.expire.long do
   header
-    .nav-menu.nav-alert-top
+    .nav-menu.checkout.nav-alert-top
       .container-fluid.nav-menu-container
         .masthead.text-center.hidden-xs
           = link_to root_path
