--- a/app/assets/stylesheets/redesign/header/select2_fame_theme/_single.css.scss
+++ b/app/assets/stylesheets/redesign/header/select2_fame_theme/_single.css.scss
@@ -4,11 +4,13 @@ $arrow-color: #000000;
   background-color: transparent;
   border: none;
   border-radius: 4px;
+  height: auto;
 
   .select2-selection__rendered {
     color: #444;
     font-weight: normal !important; // Important due to span font-weight. Don't mess with legacy
     line-height: inherit;
+    padding: 0;
     text-transform: none;
   }
 
@@ -23,43 +25,28 @@ $arrow-color: #000000;
   }
 
   .select2-selection__arrow {
-    height: 26px;
+    $arrow-median: 4px;
+    $arrow-width: 2 * $arrow-median;
+    $arrow-height: 5px;
+    $arrow-triangle: $arrow-height $arrow-median 0 $arrow-median;
+
+    height: auto;
 
     position: absolute;
 
-    top: 1px;
-    right: 1px;
+    top: 40%;
+    right: 0;
+    margin-right: -15px;
 
-    width: 20px;
+    width: $arrow-width;
 
     b {
       border-color: $arrow-color transparent transparent transparent;
       border-style: solid;
-      border-width: 5px 4px 0 4px;
-
+      border-width: $arrow-triangle;
       height: 0;
-      left: 50%;
-
-      margin-left: -4px;
-      margin-top: -2px;
-
       position: absolute;
-
-      top: 50%;
       width: 0;
-    }
-  }
-}
-
-&[dir="rtl"] {
-  .select2-selection--single {
-    .select2-selection__clear {
-      float: left;
-    }
-
-    .select2-selection__arrow {
-      left: 1px;
-      right: auto;
     }
   }
 }
